Updated portfolio layout with Bootstrap

--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First DevOps Project</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My DevOps Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello from GitHub Pages!</h1>
-  <p>This is my first live project using DevOps practices.</p>
+
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">My Portfolio</a>
+    </div>
+  </nav>
+
+  <header class="text-center p-5 bg-light">
+    <h1>Hello, I'm <strong>Your Name</strong></h1>
+    <p class="lead">Aspiring DevOps Engineer</p>
+  </header>
+
+  <section class="container mt-4">
+    <h2>About Me</h2>
+    <p>
+      I'm currently learning DevOps and building live projects with GitHub, CI/CD, and Docker.
+      This is my portfolio deployed with GitHub Pages!
+    </p>
+  </section>
+
+  <section class="container mt-4">
+    <h2>Projects</h2>
+    <ul>
+      <li>✔️ Static website deployed with GitHub Pages</li>
+      <li>🔄 GitHub Actions CI/CD Workflow (coming soon)</li>
+      <li>🐳 Dockerized app deployment (next step!)</li>
+    </ul>
+  </section>
+
+  <section class="container mt-4 mb-5">
+    <h2>Contact</h2>
+    <p>Email: you@example.com</p>
+    <p>GitHub: <a href="https://github.com/your-username" target="_blank">your-username</a></p>
+  </section>
+
+  <footer class="bg-dark text-white text-center p-3">
+    © 2025 Your Name. Built with DevOps tools!
+  </footer>
+
 </body>
 </html>
